Funcionalidad para seleccionar una foto del album y subirla al servidor implementada

--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_principal.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_principal.xml
@@ -19,7 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="@string/btn_escoger_imagen"/>
+        android:text="@string/btn_escoger_imagen"
+        android:onClick="escoger_foto_galeria"/>
 
     <Button
         android:id="@+id/btn_detalles"
