--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_principal.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_principal.xml
@@ -1,33 +1,62 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context=".ActividadPrincipal">
-
-    <Button
-        android:id="@+id/btn_tomar_photo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/btn_tomar_foto"
-        android:onClick="tomar_foto"/>
-
-    <Button
-        android:id="@+id/btn_escoger_imagen"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/btn_escoger_imagen"
-        android:onClick="escoger_foto_galeria"/>
+    tools:context=".ActividadPrincipal"
+    android:weightSum="1">
 
     <Button
         android:id="@+id/btn_detalles"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/btn_detalles"/>
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_weight="0.00"
+        android:text="@string/btn_detalles"
+        android:background="@android:drawable/ic_menu_help"
+        android:layout_above="@+id/btn_escoger_imagen"
+        android:layout_alignRight="@+id/btn_escoger_imagen"
+        android:layout_alignEnd="@+id/btn_escoger_imagen" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/btn_escoger_imagen"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:text="@string/btn_escoger_imagen"
+        android:onClick="escoger_foto_galeria"
+        android:layout_gravity="right"
+        android:background="@android:drawable/ic_menu_gallery"
+        android:layout_alignTop="@+id/btn_tomar_photo"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:id="@+id/btn_tomar_photo"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:text="@string/btn_tomar_foto"
+        android:onClick="tomar_foto"
+        android:background="@android:drawable/ic_menu_camera"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-30dp"
+        android:src="@mipmap/logo_inicio" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/inicio_intro"
+        android:id="@+id/textView4"
+        android:layout_above="@+id/btn_detalles"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
