--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_formulario.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_formulario.xml
@@ -1,100 +1,121 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.george.ommfcm.ActividadFormulario">
+    tools:context="com.example.george.ommfcm.ActividadFormulario"
+    android:orientation="vertical">
 
-    <Button
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Siguiente"
-        android:id="@+id/button"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/button2"
-        android:layout_toEndOf="@+id/button2"
-        android:layout_marginLeft="40dp"
-        android:layout_marginStart="40dp" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textStyle="bold"
+        android:text="Origen"
+        android:layout_weight="0" />
 
-    <Button
-        android:layout_width="wrap_content"
+    <AutoCompleteTextView
+        android:id="@+id/txt_origen_estado"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Cancelar"
-        android:id="@+id/button2"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="46dp"
-        android:layout_marginStart="46dp"
-        android:onClick="regresarPrincipal"/>
+        android:hint="Estado"
+        android:layout_weight="0"
+        android:textColor="@android:color/black"
+        android:popupBackground="#686868"
+        />
 
-    <EditText
-        android:layout_width="match_parent"
+    <AutoCompleteTextView
+        android:id="@+id/txt_origen_municipio"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/ciudadOrigen"
-        android:hint="Estado origen"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/municipioOrigen"
-        android:hint="Municipio origen"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/ciudadOrigen"
-        android:layout_alignParentLeft="true" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/municipioDestino"
-        android:hint="Municipio destino"
-        android:layout_below="@+id/ciudadDestino"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/ciudadDestino"
-        android:hint="Estado destino"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:hint="Municipio"
+        android:layout_weight="0"
+        android:popupBackground="#686868"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold"
-        android:text="Destino Estado/Municipio"
-        android:id="@+id/textView"
-        android:layout_below="@+id/municipioOrigen"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="32dp" />
+        android:text="Destino"
+        android:layout_marginTop="20dp"
+        android:layout_weight="0"/>
+
+    <AutoCompleteTextView
+        android:id="@+id/txt_destino_estado"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="Estado"
+        android:layout_weight="0"
+        android:popupBackground="#686868"/>
+
+    <AutoCompleteTextView
+        android:id="@+id/txt_destino_municipio"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="Municipio"
+        android:layout_weight="0"
+        android:popupBackground="#686868"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold"
-        android:text="Origen Estado/Municipio"
-        android:id="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:text="Km"
+        android:layout_marginTop="20dp"
+        android:layout_weight="0"/>
+
+
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:id="@+id/editText"
+        android:layout_weight="0"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/textTest"
-        android:layout_above="@+id/button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="56dp" />
+        android:textStyle="bold"
+        android:text="Especificar lugar en mapa"
+        android:layout_marginTop="20dp"
+        android:layout_weight="0"/>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Mostrar mapa"
+        android:layout_weight="0"
+        android:onClick="mostrarMapa"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="bottom"
+        >
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Siguiente"
+            android:layout_gravity="bottom"
+            android:onClick="irVistaPrevia"/>
+    </LinearLayout>
+
+
 
 </RelativeLayout>
