--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_confirmacion.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_confirmacion.xml
@@ -4,9 +4,34 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.george.ommfcm.ActividadConfirmacion">
+    tools:context="com.example.george.ommfcm.ActividadConfirmacion"
+    android:background="@color/bckgrndgrey">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:text="@string/gracias" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="168dp"
+        android:id="@+id/textView"
+        android:textSize="20dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView3"
+        android:src="@mipmap/accept"
+        android:layout_alignBottom="@+id/textView" />
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:text="@string/btn_regresar_inicio"
+        android:id="@+id/btn_regresar_inicio"
+        android:layout_below="@+id/imageView3"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="54dp"
+        android:background="@color/blue1"
+        android:textColor="#ffffff"/>
 
 </RelativeLayout>
