--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_formulario.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_formulario.xml
@@ -7,19 +7,22 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.george.ommfcm.ActividadFormulario"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold"
         android:text="Origen"
-        android:layout_weight="0" />
+        android:layout_weight="0"
+        android:textColor="@color/green3"
+        android:background="@color/green1" />
 
     <AutoCompleteTextView
         android:id="@+id/txt_origen_estado"
@@ -40,13 +43,15 @@
         android:popupBackground="#686868"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold"
         android:text="Destino"
         android:layout_marginTop="20dp"
-        android:layout_weight="0"/>
+        android:layout_weight="0"
+        android:background="@color/green1"
+        android:textColor="@color/green3" />
 
     <AutoCompleteTextView
         android:id="@+id/txt_destino_estado"
@@ -71,7 +76,8 @@
         android:textStyle="bold"
         android:text="Km"
         android:layout_marginTop="20dp"
-        android:layout_weight="0"/>
+        android:layout_weight="0"
+        android:textColor="@color/green3" />
 
 
     <EditText
@@ -88,14 +94,17 @@
         android:textStyle="bold"
         android:text="Especificar lugar en mapa"
         android:layout_marginTop="20dp"
-        android:layout_weight="0"/>
+        android:layout_weight="0"
+        android:textColor="@color/green3" />
 
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Mostrar mapa"
         android:layout_weight="0"
-        android:onClick="mostrarMapa"/>
+        android:onClick="mostrarMapa"
+        android:background="@color/blue1"
+        android:textColor="#ffffff"/>
 
     </LinearLayout>
 
@@ -113,7 +122,9 @@
             android:layout_height="wrap_content"
             android:text="Siguiente"
             android:layout_gravity="bottom"
-            android:onClick="irVistaPrevia"/>
+            android:onClick="irVistaPrevia"
+            android:background="@color/blue1"
+            android:textColor="#ffffff"/>
     </LinearLayout>
 
 
