--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_principal.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_principal.xml
@@ -6,7 +6,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context=".ActividadPrincipal"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@color/white">
 
     <Button
         android:id="@+id/btn_detalles"
@@ -14,49 +15,55 @@
         android:layout_height="50dp"
         android:layout_weight="0.00"
         android:text="@string/btn_detalles"
-        android:background="@android:drawable/ic_menu_help"
+        android:background="@mipmap/infoicon"
         android:layout_above="@+id/btn_escoger_imagen"
-        android:layout_alignRight="@+id/btn_escoger_imagen"
-        android:layout_alignEnd="@+id/btn_escoger_imagen" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="24dp"
+        android:onClick="mostrar_info" />
 
     <Button
         android:id="@+id/btn_escoger_imagen"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:text="@string/btn_escoger_imagen"
         android:onClick="escoger_foto_galeria"
         android:layout_gravity="right"
-        android:background="@android:drawable/ic_menu_gallery"
+        android:background="@mipmap/foldericon"
         android:layout_alignTop="@+id/btn_tomar_photo"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
     <Button
         android:id="@+id/btn_tomar_photo"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:text="@string/btn_tomar_foto"
         android:onClick="tomar_foto"
-        android:background="@android:drawable/ic_menu_camera"
+        android:background="@mipmap/camaraicon"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="210dp"
         android:id="@+id/imageView2"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="-30dp"
-        android:src="@mipmap/logo_inicio" />
+        android:layout_marginTop="0dp"
+        android:src="@mipmap/logoapp"
+        android:background="@color/green1" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/inicio_intro"
         android:id="@+id/textView4"
+        android:layout_below="@+id/imageView2"
+        android:layout_marginTop="10dp"
         android:layout_above="@+id/btn_detalles"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/green2" />
 
 </RelativeLayout>
