Metodos y codigo modificado de acuerdo a la revision del Pull request

--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_mas_info.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_mas_info.xml
@@ -43,7 +43,7 @@
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
-            android:layout_below="@id/editText3"
+            android:layout_below="@+id/editText3"
             android:src="@mipmap/logoapp" />
 
         <EditText
