Se modifico el autocompletar de la vista formulario, se cambio la forma de invocar el mapa

--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_mapa.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_mapa.xml
@@ -18,7 +18,8 @@
             android:text="Guardar seleccion"
             android:padding="10dp"
             android:layout_marginTop="20dp"
-            android:paddingRight="10dp"/>
+            android:paddingRight="10dp"
+            android:onClick="irActividadVistaPrevia"/>
     </fragment>
 
 </RelativeLayout>
