--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_formulario.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_formulario.xml
@@ -13,89 +13,122 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="bold"
-        android:text="Origen"
-        android:layout_weight="0" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textStyle="bold"
+            android:text="Origen"
+            android:layout_weight="0" />
 
-    <AutoCompleteTextView
-        android:id="@+id/txt_origen_estado"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="Estado"
-        android:layout_weight="0"
-        android:textColor="@android:color/black"
-        android:popupBackground="#686868"
-        />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <AutoCompleteTextView
-        android:id="@+id/txt_origen_municipio"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="Municipio"
-        android:layout_weight="0"
-        android:popupBackground="#686868"/>
+            <AutoCompleteTextView
+                android:id="@+id/txt_origen_estado"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:hint="Estado"
+                android:textColor="@android:color/black"
+                android:popupBackground="#686868"
+                android:completionThreshold="1"
+                android:imeOptions="actionDone" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="bold"
-        android:text="Destino"
-        android:layout_marginTop="20dp"
-        android:layout_weight="0"/>
+            <ProgressBar
+                android:id="@+id/pb_origen_estado"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:layout_marginRight="4dp"
+                android:visibility="invisible"/>
 
-    <AutoCompleteTextView
-        android:id="@+id/txt_destino_estado"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="Estado"
-        android:layout_weight="0"
-        android:popupBackground="#686868"/>
+        </FrameLayout>
 
-    <AutoCompleteTextView
-        android:id="@+id/txt_destino_municipio"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="Municipio"
-        android:layout_weight="0"
-        android:popupBackground="#686868"/>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="bold"
-        android:text="Km"
-        android:layout_marginTop="20dp"
-        android:layout_weight="0"/>
+            <AutoCompleteTextView
+                android:id="@+id/txt_origen_municipio"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:hint="Municipio"
+                android:layout_weight="0"
+                android:popupBackground="#686868"
+                android:completionThreshold="1"
+                android:imeOptions="actionDone" />
+
+            <ProgressBar
+                android:id="@+id/pb_origen_municipio"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:layout_marginRight="4dp"
+                android:visibility="invisible"/>
+
+        </FrameLayout>
 
 
-    <EditText
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:id="@+id/editText"
-        android:layout_weight="0"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textStyle="bold"
+            android:text="Destino"
+            android:layout_marginTop="20dp"
+            android:layout_weight="0"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="bold"
-        android:text="Especificar lugar en mapa"
-        android:layout_marginTop="20dp"
-        android:layout_weight="0"/>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Mostrar mapa"
-        android:layout_weight="0"
-        android:onClick="mostrarMapa"/>
+            <AutoCompleteTextView
+                android:id="@+id/txt_destino_estado"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:hint="Estado"
+                android:layout_weight="0"
+                android:popupBackground="#686868"
+                android:completionThreshold="1"
+                android:imeOptions="actionDone" />
+
+            <ProgressBar
+                android:id="@+id/pb_destino_estado"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:layout_marginRight="4dp"
+                android:visibility="invisible"/>
+
+        </FrameLayout>
+
+        <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+            <AutoCompleteTextView
+                android:id="@+id/txt_destino_municipio"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:hint="Municipio"
+                android:popupBackground="#686868"
+                android:completionThreshold="1"
+                android:imeOptions="actionDone" />
+
+            <ProgressBar
+                android:id="@+id/pb_destino_municipio"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:layout_marginRight="4dp"
+                android:visibility="invisible"/>
+
+        </FrameLayout>
 
     </LinearLayout>
 
@@ -113,7 +146,7 @@
             android:layout_height="wrap_content"
             android:text="Siguiente"
             android:layout_gravity="bottom"
-            android:onClick="irVistaPrevia"/>
+            android:onClick="irActividadMapa"/>
     </LinearLayout>
 
 
