muestra foto original de incidente

--- a/Clientes/Web/privado/css/sitio.css
+++ b/Clientes/Web/privado/css/sitio.css
@@ -13,3 +13,11 @@ select.especie{
 .menuScrolleable{
 	margin-top: 50px;
 }
+
+.fotoWidth{
+	width: 1000px;
+}
+
+.fotoMaxWidth{
+	max-width: 100%;
+}
