--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_confirmacion.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_confirmacion.xml
@@ -1,37 +1,64 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="com.example.george.ommfcm.ActividadConfirmacion"
-    android:background="@color/bckgrndgrey">
+    android:background="@color/gris"
+    android:orientation="vertical">
 
-    <TextView android:text="@string/gracias" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="168dp"
-        android:id="@+id/textView"
-        android:textSize="20dp" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView3"
-        android:src="@mipmap/accept"
-        android:layout_alignBottom="@+id/textView" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:layout_gravity="bottom">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:scaleType="fitEnd"
+            android:maxWidth="200dp"
+            android:maxHeight="200dp"
+            android:layout_gravity="center_horizontal|bottom"
+            android:id="@+id/imageView3"
+            android:src="@drawable/icono_confirmacion"/>
+    </LinearLayout>
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:text="@string/btn_regresar_inicio"
-        android:id="@+id/btn_regresar_inicio"
-        android:layout_below="@+id/imageView3"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="54dp"
-        android:background="@color/blue1"
-        android:textColor="#ffffff"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-</RelativeLayout>
+        <TextView android:text="@string/gracias"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textColor="@color/white"
+            android:layout_weight="1"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/textView"
+            android:textSize="20sp"
+            android:layout_marginTop="40dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/btn_regresar_inicio"
+                android:id="@+id/btn_regresar_inicio"
+                android:background="@color/blue1"
+                android:textColor="#ffffff"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+</LinearLayout>
