--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_formulario.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_formulario.xml
@@ -1,11 +1,7 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.george.ommfcm.ActividadFormulario"
     android:orientation="vertical"
     android:background="@color/white">
@@ -14,19 +10,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="bold"
-        android:text="Origen"
-        android:layout_weight="0"
-        android:textColor="@color/green3"
-        android:background="@color/green1" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textStyle="bold"
+            android:text="Origen"
+            android:layout_weight="0"
+            android:gravity="center_vertical"
+            android:paddingLeft="20dp"
+            android:textColor="@color/green3"
+            android:background="@color/green1"
+            android:textSize="20sp" />
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
+            android:layout_marginTop="10dp">
 
             <AutoCompleteTextView
                 android:id="@+id/txt_origen_estado"
@@ -45,13 +48,17 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|center_vertical"
                 android:layout_marginRight="4dp"
-                android:visibility="invisible"/>
+                android:visibility="invisible"
+                android:background="@xml/progress"/>
 
         </FrameLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:layout_marginTop="10dp">
 
             <AutoCompleteTextView
                 android:id="@+id/txt_origen_municipio"
@@ -70,23 +77,32 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|center_vertical"
                 android:layout_marginRight="4dp"
-                android:visibility="invisible"/>
+                android:visibility="invisible"
+                android:background="@xml/progress"/>
 
         </FrameLayout>
 
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textStyle="bold"
             android:text="Destino"
+            android:paddingLeft="20dp"
+            android:gravity="center_vertical"
             android:layout_marginTop="20dp"
-            android:layout_weight="0"/>
+            android:layout_weight="0"
+            android:textColor="@color/green3"
+            android:background="@color/green1"
+            android:textSize="20sp"/>
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:layout_marginTop="10dp">
 
             <AutoCompleteTextView
                 android:id="@+id/txt_destino_estado"
@@ -105,13 +121,17 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|center_vertical"
                 android:layout_marginRight="4dp"
-                android:visibility="invisible"/>
+                android:visibility="invisible"
+                android:background="@xml/progress"/>
 
         </FrameLayout>
 
         <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:layout_marginTop="10dp">
 
             <AutoCompleteTextView
                 android:id="@+id/txt_destino_municipio"
@@ -129,7 +149,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|center_vertical"
                 android:layout_marginRight="4dp"
-                android:visibility="invisible"/>
+                android:visibility="invisible"
+                android:background="@xml/progress"/>
 
         </FrameLayout>
 
@@ -137,11 +158,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:orientation="vertical"
-        android:layout_marginTop="40dp"
-        android:layout_gravity="bottom"
+        android:gravity="bottom"
         >
 
         <Button
@@ -149,11 +169,10 @@
             android:layout_height="wrap_content"
             android:text="Siguiente"
             android:layout_gravity="bottom"
-            android:onClick="irVistaPrevia"
+            android:onClick="irActividadMapa"
             android:background="@color/blue1"
-            android:textColor="#ffffff"/>
+            android:textColor="#ffffff"
+            android:layout_margin="20dp"
+            />
     </LinearLayout>
-
-
-
-</RelativeLayout>
+</LinearLayout>
