--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_mapa.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_mapa.xml
@@ -1,9 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     tools:context="com.example.george.ommfcm.ActividadMapa">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
@@ -15,11 +12,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|bottom"
-            android:text="Guardar seleccion"
+            android:text="Guardar coordenada"
             android:padding="10dp"
-            android:layout_marginTop="20dp"
-            android:paddingRight="10dp"
-            android:onClick="irActividadVistaPrevia"/>
+            android:layout_marginBottom="20dp"
+            android:onClick="irActividadVistaPrevia"
+            android:background="@color/blue1"
+            android:textColor="#ffffff"/>
     </fragment>
 
 </RelativeLayout>
