--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_principal.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_principal.xml
@@ -1,69 +1,85 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ActividadPrincipal"
-    android:weightSum="1"
     android:background="@color/white">
 
-    <Button
-        android:id="@+id/btn_detalles"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_weight="0.00"
-        android:text="@string/btn_detalles"
-        android:background="@mipmap/infoicon"
-        android:layout_above="@+id/btn_escoger_imagen"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="24dp"
-        android:onClick="mostrar_info" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-    <Button
-        android:id="@+id/btn_escoger_imagen"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:text="@string/btn_escoger_imagen"
-        android:onClick="escoger_foto_galeria"
-        android:layout_gravity="right"
-        android:background="@mipmap/foldericon"
-        android:layout_alignTop="@+id/btn_tomar_photo"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView2"
+            android:padding="30dp"
+            android:layout_marginTop="0dp"
+            android:src="@mipmap/logoapp"
+            android:background="@color/green1"/>
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_tomar_photo"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:text="@string/btn_tomar_foto"
-        android:onClick="tomar_foto"
-        android:background="@mipmap/camaraicon"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <ImageView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="210dp"
-        android:id="@+id/imageView2"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="0dp"
-        android:src="@mipmap/logoapp"
-        android:background="@color/green1" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:padding="20dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/inicio_intro"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/imageView2"
-        android:layout_marginTop="10dp"
-        android:layout_above="@+id/btn_detalles"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/green2" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/inicio_intro"
+            android:id="@+id/textView4"
+            android:gravity="center"
+            android:textColor="@color/green2"
+            android:layout_weight="1"/>
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/btn_detalles"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_weight="0"
+            android:text="@string/btn_detalles"
+            android:background="@drawable/icono_info"
+            android:onClick="mostrar_info"
+            android:layout_gravity="end"
+            />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:padding="20dp"
+        >
+        <ImageButton
+            android:id="@+id/btn_tomar_photo"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="@string/btn_tomar_foto"
+            android:onClick="tomar_foto"
+            android:scaleType="fitCenter"
+            android:background="@color/green4"
+            android:src="@drawable/icono_camara"
+            android:padding="30dp"
+            android:layout_marginRight="10dp"/>
+
+        <ImageButton
+            android:id="@+id/btn_escoger_imagen"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:text="@string/btn_escoger_imagen"
+            android:onClick="escoger_foto_galeria"
+            android:background="@color/green4"
+            android:src="@drawable/icono_carpeta"
+            android:padding="30dp"
+            android:layout_marginLeft="10dp"
+            android:scaleType="fitCenter"
+            />
+    </LinearLayout>
+</LinearLayout>
