Se agregaron los metodos en ActividadConfirmacion startOver y en ActividadVistaPrevia se agregaron lineas en el metodo onSuccess con el proposito de llevar al usuario a la vista de ActividadConfirmacion

--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_confirmacion.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_confirmacion.xml
@@ -55,7 +55,8 @@
                 android:text="@string/btn_regresar_inicio"
                 android:id="@+id/btn_regresar_inicio"
                 android:background="@color/blue1"
-                android:textColor="#ffffff"/>
+                android:textColor="#ffffff"
+                android:onClick="startOver" />
         </LinearLayout>
 
     </LinearLayout>
