--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_principal.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_principal.xml
@@ -8,16 +8,30 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:id="@+id/imageView2"
-            android:padding="30dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:paddingTop="30dp"
             android:layout_marginTop="0dp"
             android:src="@mipmap/logoapp"
-            android:background="@color/green1"/>
+            android:background="@color/green1" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/watch"
+            android:textStyle="bold"
+            android:id="@+id/textView5"
+            android:gravity="center"
+            android:background="@color/green1"
+            android:padding="10dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -25,7 +39,44 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="20dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/btn_detalles"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:text="@string/btn_detalles"
+                android:background="@drawable/icono_info"
+                android:onClick="mostrar_info"
+                android:layout_gravity="end"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_margin="10dp"/>
+            <Button
+                android:id="@+id/btn_precauciones"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:text="@string/btn_precauciones"
+                android:background="@drawable/icono_admiracion"
+                android:onClick="mostrar_precauciones"
+                android:layout_gravity="end"
+                android:layout_alignParentTop="true"
+                android:layout_toLeftOf="@+id/btn_detalles"
+                android:layout_toStartOf="@+id/btn_detalles"
+                android:layout_margin="10dp"/>
+
+        </RelativeLayout>
 
         <TextView
             android:layout_width="match_parent"
@@ -36,16 +87,6 @@
             android:textColor="@color/green2"
             android:layout_weight="1"/>
 
-        <Button
-            android:id="@+id/btn_detalles"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_weight="0"
-            android:text="@string/btn_detalles"
-            android:background="@drawable/icono_info"
-            android:onClick="mostrar_info"
-            android:layout_gravity="end"
-            />
     </LinearLayout>
 
 
