--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_mas_info.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_mas_info.xml
@@ -44,7 +44,7 @@
                     android:paddingLeft="40dp"
                     android:paddingRight="40dp"
                     android:layout_below="@+id/editText3"
-                    android:src="@mipmap/watchv5"
+                    android:src="@mipmap/watchicon"
                     />
 
                 <TextView
