--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_principal.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_principal.xml
@@ -20,7 +20,7 @@
             android:paddingRight="30dp"
             android:paddingTop="30dp"
             android:layout_marginTop="0dp"
-            android:src="@mipmap/watchv5"
+            android:src="@mipmap/watchicon"
             android:background="@color/green1" />
 
         <TextView
